RESOLVED FIXED30042
[Qt] windowsKeyCodeForKeyEvent() returns a wrong value for the F10 key.
https://bugs.webkit.org/show_bug.cgi?id=30042
Summary [Qt] windowsKeyCodeForKeyEvent() returns a wrong value for the F10 key.
Jakub Wieczorek
Reported 2009-10-03 07:08:27 PDT
From PlatformKeyboardEventQt.cpp: case Qt::Key_F8: return VK_F8; case Qt::Key_F9: return VK_F9; case Qt::Key_F10: return VK_F11; case Qt::Key_F11: return VK_F11; case Qt::Key_F12: return VK_F12;
Attachments
patch (1.58 KB, patch)
2009-10-03 07:10 PDT, Jakub Wieczorek
vestbo: review+
Jakub Wieczorek
Comment 1 2009-10-03 07:10:56 PDT
Tor Arne Vestbø
Comment 2 2009-10-05 03:59:36 PDT
Landed in r49089
Note You need to log in before you can comment on or make changes to this bug.