2009-10-05  Jakub Wieczorek  <faw217@gmail.com>

Reviewed by Tor Arne Vestbø.

        [Qt] windowsKeyCodeForKeyEvent() returns a wrong value for the F10 key.
        https://bugs.webkit.org/show_bug.cgi?id=30042

        * platform/qt/PlatformKeyboardEventQt.cpp:
        (WebCore::windowsKeyCodeForKeyEvent):

Canonical link: https://commits.webkit.org/40648@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49089 268f45cc-cd09-0410-ab3c-d52691b4dbfc